a bit better style, but need to limit size of chart

--- a/playerchart.html
+++ b/playerchart.html
@@ -95,4 +95,5 @@ function initChart() {
       </option>
   {% endfor %}
 </select>
-<canvas id="playerChart" style="width:100%;max-width:700px" onload="initChart()" ></canvas>
+<br>
+<canvas id="playerChart" height="720" ></canvas>
