--- a/playerchart.html
+++ b/playerchart.html
@@ -77,7 +77,7 @@ function initChart() {
 }
 </script>
 
-<h4> Data from fbref.com - Percentiles per 90 minutes </h4>
+<h4> Data from fbref.com - Percentiles </h4>
 
 <select id="selectedPlayerBlue" onchange="selectPlayer()" >
     <option disabled selected value> -- select an option -- </option>
@@ -96,4 +96,6 @@ function initChart() {
   {% endfor %}
 </select>
 <br>
-<canvas id="playerChart" height="720" ></canvas>
+<div style="width: 450px; height: 450px" >
+  <canvas id="playerChart" style="width: 400px; height: 400px" ></canvas>
+</div>
