first data fetcher try

--- a/playerchart.html
+++ b/playerchart.html
@@ -7,7 +7,7 @@ title: Player
 
 <script>
 const labels = [
-"Goals + Assist", "xG", "xAG",  // results
+"Goals + Assists", "xG", "xAG",  // results
 "Progressive Carries", "Progressive Passes", "Progressive Passes Rec",
 "Passes Attempted", "Pass Completion %", "Progressive Passes", "Assists", "Key Passes", "Crosses", // passing
 "Tackles", "Tackles Won", "Blocks", "Interceptions", "Touches", "Take-Ons Attempted", "Successful Take-Ons"
