--- a/team.html
+++ b/team.html
@@ -305,7 +305,7 @@ Team selection:
                 <select id="AMR_1" class="player" pos="FW" onchange="playerSelected('AMR', 'amrChart')">
                     <option disabled selected value> -- select a team -- </option>
                 </select>
-                <select id="AMR_2" class="player" pos="FW" onchange="playerSelected('AMR', 'amlChart')">
+                <select id="AMR_2" class="player" pos="FW" onchange="playerSelected('AMR', 'amrChart')">
                     <option disabled selected value> -- select a team -- </option>
                 </select>
                 <div class="radar">
